# GeKo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt
cmake/: DefaultExecutable.cmake  DefaultInclude.cmake  DefaultLibrary.cmake  DefaultProject.cmake  Doxyfile.in  Doxyfile_graphviz.in  FindASSIMP.cmake  getASSIMP.cmake  getDoxygen.cmake  getGLEW.cmake  getGLFW3.cmake  getGLM.cmake  getIMGUI.cmake  getIntelTBB.cmake  getOpenAL.cmake  getOpenGL3.cmake  getSTB.cmake  getTinyXML.cmake
resources/: .gitignore  Ant.ply  AntHome.ply  Bee.ply  Cube.ply  Flower.ply  Geko.ply  Thumbs.db  Tree.ply
resources/XML/: ComicCloudEffect.xml  EffectTest.xml  Effect_Circle.xml  Effect_ComicCloud.xml  Effect_EnergyBall.xml  Effect_Fire.xml  Effect_FireworkBlue.xml  Effect_FireworkGold.xml  Effect_FireworkGreen.xml  Effect_FireworkRed.xml  Effect_Fontaine.xml  Effect_FruitFlies.xml  Effect_Glowworm.xml  Effect_Quad.xml  Effect_Rain.xml  Effect_ScreenFruitFlies.xml  Effect_SmokeBlack.xml  Effect_SmokeCloud.xml  Effect_SmokeWhite.xml  Effect_Snow.xml  Effect_SnowStrong.xml  Fire.xml  SwarmOfFliesEffect.xml
src/executables/: README.txt
src/executables/01_Renderer-Test/: main.cpp
src/executables/02_FBO-Depth-Test/: main.cpp
src/executables/02_FBO-Stencil-Test/: main.cpp
src/executables/02_FBO-Test/: main.cpp
src/executables/02_FBO-Test-OLD/: main.cpp
src/executables/03_Szenegraph-Test/: main.cpp
src/executables/04_InputTest/: main.cpp
src/executables/05_TrackballTest/: main.cpp
src/executables/06_PilotviewTest/: main.cpp
src/libraries/: README.txt
(+397 files in other folders)
